# FastRecvSMS

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  sms.py
fastrecvsms/: __main__.py  cli.py  config.py  display.py  exceptions.py  mcp_server.py  models.py
fastrecvsms/providers/: __init__.py  base.py  fivesim.py  smsactivate.py
