[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastrecvsms"
version = "2.0.0"
description = "SMS verification toolkit for security professionals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Moamen Basel" }]
keywords = ["sms", "verification", "pentesting", "security", "5sim", "sms-activate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
fastrecvsms = "fastrecvsms.cli:app"
frsms = "fastrecvsms.cli:app"
fastrecvsms-mcp = "fastrecvsms.mcp_server:main"

[project.urls]
Homepage = "https://github.com/momenbasel/FastRecvSMS"
Repository = "https://github.com/momenbasel/FastRecvSMS"
Issues = "https://github.com/momenbasel/FastRecvSMS/issues"

[tool.hatch.build.targets.wheel]
packages = ["fastrecvsms"]
